[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "task-tracker"
version = "0.1.0"
description = "A simple command-line task manager"
requires-python = ">=3.10"

[tool.setuptools]
py-modules = ["main", "utils", "intefaz"]

[project.scripts]
task = "main:main"
